--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                         quasi aliquam eligendi, placeat qui corporis!
                     </p>
                 </div>
-                <div class="mail">
+                <div class="rasel.sainn@gmail.com">
                     <img src="img/Photo.jpg" alt="">
                     <p>Or you can also contact me through-</p>
                     
