--- a/contact.html
+++ b/contact.html
@@ -95,14 +95,14 @@
                         quasi aliquam eligendi, placeat qui corporis!
                     </p>
                 </div>
-                <div class="rasel.sainn@gmail.com">
+                <div class="mail">
                     <img src="img/Photo.jpg" alt="">
                     <p>Or you can also contact me through-</p>
                     
                     <div class="icon">
                         <div class="icon_">
                             <i class="fa-solid fa-envelope"></i>
-                            <a href="mailto:rasel.sainn@gmail.com"><p>Mail</p></a>
+                            <a href="mailto:rasel.sainn@gmail.com"><p>rasel.sainn@gmail.com</p></a>
                         </div>
                         <div class="icon_">
                             <i class="fa-solid fa-phone"></i>
